--- a/index.html
+++ b/index.html
@@ -7,8 +7,37 @@
     <link rel="stylesheet" href="stylesheets/main.css" title="text/css" />
   </head>
   <body>
+   <div class="header1">
+    <p>5280 Landmarks</p>
+   </div>
 
-  </body>
+   <div class="header2">
+   </div>
+<aside>
+    <h2 style="font-weight: bold;padding: 2px;"> Larimer Square <br></h2>
+    <img src="/Users/andrewbingham/turing_work/2mod/intermission_work/static_challenges/images/2.jpg"style="height: 100px;width: 100px;float:right">
+    <h2 style="font-weight: bold;padding: 2px;"> Milleniuem Bridge<br></h2>
+    <img src="/Users/andrewbingham/turing_work/2mod/intermission_work/static_challenges/images/5.jpg"style="height: 100px;width: 100px;float:right">
+    <h2 style="font-weight: bold;padding: 2px;"> Molly Brown House<br></h2>
+    <img src="/Users/andrewbingham/turing_work/2mod/intermission_work/static_challenges/images/6.jpg"style="height: 100px;width: 100px;float:right">
+  </aside>
+   <div>
+  <img src="/Users/andrewbingham/turing_work/2mod/intermission_work/static_challenges/images/1.jpg" alt="Denver Art Museum" style="max-width: 1000; height: auto; padding: 20px; margin-left: 40px;">
+  <h3 style="font-weight: bold;font-family: Arial, Helvetica, sans-serif;margin-left: 60px;font-size: 20px;padding: 5px;">Denver Art Museum</h3>
+    <p1></p1>
+    <p1> Lorem ipsum dolor sit amet, quis idque munere est ex. Eos id soluta meliore menandri, sed ex graeci prompta sapientem. Cum in verterem partiendo, quod partiendo principes vix et. Ne eam virtute abhorreant. At qui doming nemore mediocritatem, ei pri bonorum blandit, vim elitr recusabo salutatus eu.<br></p1>
+    <p1> Mea adhuc persecuti in, dolorum mentitum ullamcorper his ut. Graeci scriptorem cum ea, an ignota signiferumque nec. No dicunt sanctus moderatius sed, meliore inermis ei mea. Utinam impedit maiestatis sea ad, quis efficiendi eu mel, ea solet placerat phaedrum vis. Et vix causae aliquam, commodo blandit imperdiet ex his.<br></p1>
+    <p1> Duo an eleifend omittantur, te sint civibus recusabo eos. An ius corpora definiebas cotidieque. Eu pri reque sapientem contentiones, fierent conclusionemque mei in. Saepe veniam ne mei, ut facilisi omittantur nec.<br></p1>
+    <p1> Nam ad quas consul salutandi, sea ad verterem quaestio. Mei ea quot dictas. Eam choro eloquentiam eu, vim cu facete scriptorem. Mel at latine veritus.<br></p>
+    <p1></p1>
+    <p1></p1>
+  </div>
+
+  
+  <footer>
+    <h3 style="margin-left: 20px; background-color: rgb(45, 45, 45);padding: 20px;color: white;;">Alia utinam maiorum pro te, eum ex sonet putent discere. Mea cu possit forensibus comprehensam. Mel te primis commodo, nibh labore nostrum ei mel. Ex vix adolescens suscipiantur, malorum iuvaret usu id. At mea lobortis pertinacia, scripta sententiae et mei, sumo partem pro ex. Nam movet facete ex, eos rebum nulla qualisque ea, vis malis clita efficiantur ut. At vel lorem paulo soluta, ancillae quaestio no quo, id vim blandit voluptatum.</h3>
+  </footer>
+</body>
 </html>
 
 
